--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expel-hw",
+  "name": "simple-react-redux-calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
