--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,8 +19,9 @@
   },
   "devDependencies": {
     "@types/node": "^10.0.4",
-    "typescript": "^2.8.3",
     "prettier": "^1.13.4",
-    "tape": "^4.9.0"
+    "redux-devtools-extension": "^2.13.5",
+    "tape": "^4.9.0",
+    "typescript": "^2.8.3"
   }
 }
